Backbone 项目组成的基本元素
针对结束react+redux项目的一些经验作一些回顾，定义项目的规范非常重要，tab-size，注释，写法规范，目录结构等；抓住独立开发项目成
长的机会～～；

--- a/Basic_Usage/components/aside/tpl.html
+++ b/Basic_Usage/components/aside/tpl.html
@@ -27,9 +27,9 @@
 .aside-content a i{
 	margin-top: -4rem;
 }
-.js-go-top{display: none}
-
-
+.js-go-top{
+	display: none
+}
 </style>
 <div class="aside-fixed media-fixed">
 	<div class='aside-content'>
